clean build and don't build test files

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "prepublish": "tsc"
+    "clean": "rimraf dist",
+    "prepublish": "npm run-script clean && tsc"
   },
   "keywords": [
     "noctis"
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.7.3",
+    "rimraf": "^3.0.0",
     "typescript": "^3.6.2"
   }
 }
